--- a/08_introduction_to_nlp_in_tensorflow.ipynb
+++ b/08_introduction_to_nlp_in_tensorflow.ipynb
@@ -4695,12 +4695,166 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "c2uXt55RZvA_"
       },
       "source": [
-        ""
+        "## Saving and loading a trained model\n",
+        "\n",
+        "There are 2 main formats to save a model to in TensorFlow :\n",
+        "1. The HDF5 format\n",
+        "2. The `SavedModel` format (this is default when using TensorFlow)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_XlelKplaE1x",
+        "outputId": "7a9e05e3-72bd-4313-da04-13ff9b972a56",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model_6_results"
+      ],
+      "execution_count": 119,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 81.49606299212599,\n",
+              " 'f1': 0.8138139523860313,\n",
+              " 'precision': 0.8161852632862286,\n",
+              " 'recall': 0.8149606299212598}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 119
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "012oCyM3aVKR"
+      },
+      "source": [
+        "# Save TF Hub Sentence Encoder model to HDF5 format\n",
+        "model_6.save(\"model_6.h5\")"
+      ],
+      "execution_count": 120,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pwU33k9xaexV"
+      },
+      "source": [
+        "# Load model with custom Hub Layer(required for HDF5 format model)\n",
+        "import tensorflow_hub as hub\n",
+        "loaded_model_6 = tf.keras.models.load_model(\"model_6.h5\",\n",
+        "                                            custom_objects={\"KerasLayer\" : hub.KerasLayer})"
+      ],
+      "execution_count": 121,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a6K8qNFNbQub",
+        "outputId": "cfb723f4-bf60-4f62-ed57-82581586886c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# How does our loaded_mdoel perform?\n",
+        "loaded_model_6.evaluate(val_sentences, val_labels)"
+      ],
+      "execution_count": 123,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "24/24 [==============================] - 1s 10ms/step - loss: 0.4256 - accuracy: 0.8150\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.4256327152252197, 0.8149606585502625]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 123
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1n5VyhR_bwql"
+      },
+      "source": [
+        "Now let's save to `SavedModel` format...see more on this here :\n",
+        "https://www.tensorflow.org/tutorials/keras/save_and_load"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3o5sk3dZb4Xx",
+        "outputId": "e926a586-19eb-4dda-8aa4-23d1590cffa4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Save TF Hub Sentence Encoder model to SavedModel format(default)\n",
+        "model_6.save(\"model_6_savedmodel_format\")"
+      ],
+      "execution_count": 125,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:absl:Function `_wrapped_model` contains input name(s) USE_input with unsupported characters which will be renamed to use_input in the SavedModel.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Assets written to: model_6_savedmodel_format/assets\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Assets written to: model_6_savedmodel_format/assets\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HYaqyOd7ckqJ"
+      },
+      "source": [
+        "loaded_model_6 = tf.keras.models.load_model"
       ],
       "execution_count": null,
       "outputs": []
