--- a/08_introduction_to_nlp_in_tensorflow.ipynb
+++ b/08_introduction_to_nlp_in_tensorflow.ipynb
@@ -5144,7 +5144,7 @@
       "source": [
         "# Find the wrong predictions and sort by prediction probabilities\n",
         "most_wrong = val_df[val_df[\"target\"] != val_df[\"pred\"]].sort_values(\"pred_prob\", ascending=False)\n",
-        "most_wrong[:10]"
+        "most_wrong[:10] # false positives"
       ],
       "execution_count": 139,
       "outputs": [
@@ -5295,7 +5295,7 @@
         "outputId": "a6efa0dd-5b91-4c0a-cf92-9ffcac75fd7f"
       },
       "source": [
-        "most_wrong.tail()"
+        "most_wrong.tail() # false negatives"
       ],
       "execution_count": 140,
       "outputs": [
@@ -5380,6 +5380,95 @@
             "tags": []
           },
           "execution_count": 140
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vTA0arc8_gBu",
+        "outputId": "db459c45-bd51-477b-ffe3-e82c7ce2ab38",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check the false positives (model predicted 1 when should've been 0)\n",
+        "for row in most_wrong[:10].itertuples() :\n",
+        "  _, text, target, pred, pred_prob = row\n",
+        "  print(f\"Target : {target}, Pred: {pred}, Prob: {pred_prob}\")\n",
+        "  print(f\"Text:\\n{text}\\n\")\n",
+        "  print(\"-----\\n\")"
+      ],
+      "execution_count": 144,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Target : 0, Pred: 1.0, Prob: 0.9101957678794861\n",
+            "Text:\n",
+            "? High Skies - Burning Buildings ? http://t.co/uVq41i3Kx2 #nowplaying\n",
+            "\n",
+            "-----\n",
+            "\n",
+            "Target : 0, Pred: 1.0, Prob: 0.8769821524620056\n",
+            "Text:\n",
+            "FedEx will no longer transport bioterror pathogens in wake of anthrax lab mishaps http://t.co/lHpgxc4b8J\n",
+            "\n",
+            "-----\n",
+            "\n",
+            "Target : 0, Pred: 1.0, Prob: 0.8523000478744507\n",
+            "Text:\n",
+            "@noah_anyname That's where the concentration camps and mass murder come in. \n",
+            " \n",
+            "EVERY. FUCKING. TIME.\n",
+            "\n",
+            "-----\n",
+            "\n",
+            "Target : 0, Pred: 1.0, Prob: 0.8354544639587402\n",
+            "Text:\n",
+            "Ashes 2015: AustraliaÛªs collapse at Trent Bridge among worst in history: England bundled out Australia for 60 ... http://t.co/t5TrhjUAU0\n",
+            "\n",
+            "-----\n",
+            "\n",
+            "Target : 0, Pred: 1.0, Prob: 0.8272132873535156\n",
+            "Text:\n",
+            "@AshGhebranious civil rights continued in the 60s. And what about trans-generational trauma? if anything we should listen to the Americans.\n",
+            "\n",
+            "-----\n",
+            "\n",
+            "Target : 0, Pred: 1.0, Prob: 0.8148158192634583\n",
+            "Text:\n",
+            "@SonofLiberty357 all illuminated by the brightly burning buildings all around the town!\n",
+            "\n",
+            "-----\n",
+            "\n",
+            "Target : 0, Pred: 1.0, Prob: 0.8108396530151367\n",
+            "Text:\n",
+            "[55436] 1950 LIONEL TRAINS SMOKE LOCOMOTIVES WITH MAGNE-TRACTION INSTRUCTIONS http://t.co/xEZBs3sq0y http://t.co/C2x0QoKGlY\n",
+            "\n",
+            "-----\n",
+            "\n",
+            "Target : 0, Pred: 1.0, Prob: 0.8031217455863953\n",
+            "Text:\n",
+            "@madonnamking RSPCA site multiple 7 story high rise buildings next to low density character residential in an area that floods\n",
+            "\n",
+            "-----\n",
+            "\n",
+            "Target : 0, Pred: 1.0, Prob: 0.7669008374214172\n",
+            "Text:\n",
+            "@freefromwolves GodsLove &amp; #thankU brother Danny for RT of NEW VIDEO http://t.co/cybKsXHF7d The Coming Apocalyptic US Earthquake &amp; Tsunami\n",
+            "\n",
+            "-----\n",
+            "\n",
+            "Target : 0, Pred: 1.0, Prob: 0.7666252851486206\n",
+            "Text:\n",
+            "Air Group is here to the rescue! We have 24/7 Emergency Service! Learn more about it here - http://t.co/9lyx7zMtHE http://t.co/5PbC96rTMJ\n",
+            "\n",
+            "-----\n",
+            "\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
