246 Making predictions and visualizing on test dataset

--- a/08_introduction_to_nlp_in_tensorflow.ipynb
+++ b/08_introduction_to_nlp_in_tensorflow.ipynb
@@ -5568,11 +5568,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uoowPFo9NP2U",
-        "outputId": "c5ac8af4-d55d-4fdb-a0d3-f086d6d76f84",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uoowPFo9NP2U",
+        "outputId": "c5ac8af4-d55d-4fdb-a0d3-f086d6d76f84"
       },
       "source": [
         "# Making predictions on the test dataset and visualizing them\n",
@@ -5656,6 +5656,29 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XXXVd5ymQo3A"
+      },
+      "source": [
+        "## Your challenge... predicting on Tweets from the wild\n",
+        "Go to your favourite Tweitter account and copy one of their latest Tweets.\n",
+        "Than pass that tweet through our trained model.\n",
+        "Is that tweet disaster or not a disaster?\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "z6J6yAJlQ9TT"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
