--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "09_milestone_project_2_skimlit",
       "provenance": [],
-      "authorship_tag": "ABX9TyPAHVc8u5xREi1fRHmpjYs1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +33,8 @@
         "id": "-8fbclEDHYdu"
       },
       "source": [
-        "001"
+        "Replicating the PubMed RCT \n",
+        "https://arxiv.org/abs/1710.06071"
       ]
     }
   ]
