252 start the notebook

--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -33,8 +33,48 @@
         "id": "-8fbclEDHYdu"
       },
       "source": [
-        "Replicating the PubMed RCT \n",
-        "https://arxiv.org/abs/1710.06071"
+        "# Milestone Project 2: SkimLit\n",
+        "\n",
+        "The purpose of this notebook is to build an NL P model to to make reading medical abstracts easier.\n",
+        "The paper we're replicating (the source of the dataset that we'll be using) is available here : https://arxiv.org/abs/1710.06071\n",
+        "\n",
+        "And reading through the paper above, we see that the model architecture that they use to achieve their best results is available here:\n",
+        "https://arxiv.org/abs/1612.05251\n",
+        "\n",
+        "**Resources** If you want to find the ground truth for this notebook(with lots of diagrams and text annotations) see the GitHub :\n",
+        "https://github.com/mrdbourke/tensorflow-deep-learning/blob/main/09_SkimLit_nlp_milestone_project_2.ipynb"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fDkf0lO-BKzH"
+      },
+      "source": [
+        "## Confirm access to GPU\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "e15lhSphBQBM",
+        "outputId": "7815825c-875f-47f4-8ea9-d14a38854c2c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!nvidia-smi -L"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "GPU 0: Tesla T4 (UUID: GPU-d15f145d-4f95-e7de-aef7-8d2e3809efdb)\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
