252. Setting up our notebook for Milestone Project 2 (getting the data)

--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -57,11 +57,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "e15lhSphBQBM",
-        "outputId": "7815825c-875f-47f4-8ea9-d14a38854c2c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "e15lhSphBQBM",
+        "outputId": "7815825c-875f-47f4-8ea9-d14a38854c2c"
       },
       "source": [
         "!nvidia-smi -L"
@@ -76,6 +76,133 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1xj7UyXGBiwb"
+      },
+      "source": [
+        "## Get data\n",
+        "Since we'll be replicating the paper above(PubMed 200K RCT), let's download the dataset they use.\n",
+        "We can do so from the authors GitHub :\n",
+        "https://github.com/Franck-Dernoncourt/pubmed-rct\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YYhWiiA8Cju9",
+        "outputId": "1b250383-4698-4824-d56a-444832df6abd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!git clone https://github.com/Franck-Dernoncourt/pubmed-rct\n",
+        "!ls pubmed-rct"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Cloning into 'pubmed-rct'...\n",
+            "remote: Enumerating objects: 33, done.\u001b[K\n",
+            "remote: Counting objects: 100% (3/3), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (3/3), done.\u001b[K\n",
+            "remote: Total 33 (delta 0), reused 0 (delta 0), pack-reused 30\u001b[K\n",
+            "Unpacking objects: 100% (33/33), done.\n",
+            "PubMed_200k_RCT\n",
+            "PubMed_200k_RCT_numbers_replaced_with_at_sign\n",
+            "PubMed_20k_RCT\n",
+            "PubMed_20k_RCT_numbers_replaced_with_at_sign\n",
+            "README.md\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_JevalUXDYYj",
+        "outputId": "f64e7595-94c2-40af-d222-678aec250928",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check what files are in the PubMed_20K dataset\n",
+        "! ls pubmed-rct/PubMed_20k_RCT_numbers_replaced_with_at_sign/\n",
+        "#! ls pubmed-rct/PubMed_20k_RCT/"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "dev.txt  test.txt  train.txt\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TmHKHut_Dzda"
+      },
+      "source": [
+        "# Start our experiments using the 20K dataset with numbers replaced by \"@\" sign\n",
+        "data_dir = \"/content/pubmed-rct/PubMed_20k_RCT_numbers_replaced_with_at_sign\"\n"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kDLjWWDBE1fo",
+        "outputId": "9b9be7d5-8fcf-4188-a2e9-ac3730a54116",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check all of the filenames in the target directory \n",
+        "import os\n",
+        "filenames = [data_dir + filename for filename in os.listdir(data_dir)]\n",
+        "filenames"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['/content/pubmed-rct/PubMed_20k_RCT_numbers_replaced_with_at_signdev.txt',\n",
+              " '/content/pubmed-rct/PubMed_20k_RCT_numbers_replaced_with_at_signtrain.txt',\n",
+              " '/content/pubmed-rct/PubMed_20k_RCT_numbers_replaced_with_at_signtest.txt']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EMePMwG_FCFx"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
