254. Writing a preprocessing function to structure our data for modelling

--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -61,17 +61,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e15lhSphBQBM",
-        "outputId": "7815825c-875f-47f4-8ea9-d14a38854c2c"
+        "outputId": "cbb63a38-16ab-43bd-fd27-0a0f0de6ffdc"
       },
       "source": [
         "!nvidia-smi -L"
       ],
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "GPU 0: Tesla T4 (UUID: GPU-d15f145d-4f95-e7de-aef7-8d2e3809efdb)\n"
+            "GPU 0: Tesla T4 (UUID: GPU-d0b6ac4b-9c31-c9cd-31be-a0eaa79ba074)\n"
           ],
           "name": "stdout"
         }
@@ -96,13 +96,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YYhWiiA8Cju9",
-        "outputId": "1b250383-4698-4824-d56a-444832df6abd"
+        "outputId": "a93d13f2-db24-4f66-858b-63c67c32a625"
       },
       "source": [
         "!git clone https://github.com/Franck-Dernoncourt/pubmed-rct\n",
         "!ls pubmed-rct"
       ],
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,14 +130,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_JevalUXDYYj",
-        "outputId": "f64e7595-94c2-40af-d222-678aec250928"
+        "outputId": "9f019f3d-7d81-4c13-eaeb-11ec9ffa0889"
       },
       "source": [
         "# Check what files are in the PubMed_20K dataset\n",
         "! ls pubmed-rct/PubMed_20k_RCT_numbers_replaced_with_at_sign/\n",
         "#! ls pubmed-rct/PubMed_20k_RCT/"
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,7 +157,7 @@
         "# Start our experiments using the 20K dataset with numbers replaced by \"@\" sign\n",
         "data_dir = \"/content/pubmed-rct/PubMed_20k_RCT_numbers_replaced_with_at_sign/\"\n"
       ],
-      "execution_count": 10,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -167,7 +167,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kDLjWWDBE1fo",
-        "outputId": "9b9be7d5-8fcf-4188-a2e9-ac3730a54116"
+        "outputId": "3897f35c-917f-46c1-8bbc-d40266d1b50a"
       },
       "source": [
         "# Check all of the filenames in the target directory \n",
@@ -181,9 +181,9 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['/content/pubmed-rct/PubMed_20k_RCT_numbers_replaced_with_at_signdev.txt',\n",
-              " '/content/pubmed-rct/PubMed_20k_RCT_numbers_replaced_with_at_signtrain.txt',\n",
-              " '/content/pubmed-rct/PubMed_20k_RCT_numbers_replaced_with_at_signtest.txt']"
+              "['/content/pubmed-rct/PubMed_20k_RCT_numbers_replaced_with_at_sign/dev.txt',\n",
+              " '/content/pubmed-rct/PubMed_20k_RCT_numbers_replaced_with_at_sign/train.txt',\n",
+              " '/content/pubmed-rct/PubMed_20k_RCT_numbers_replaced_with_at_sign/test.txt']"
             ]
           },
           "metadata": {
@@ -229,24 +229,24 @@
         "  with open(filename, \"r\") as f :\n",
         "    return f.readlines()\n"
       ],
-      "execution_count": 13,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "FHmJfFAJGfHu",
-        "outputId": "86296fe7-d911-447a-cfeb-248eb7d066f5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7b2d2ea6-6dd1-4bc7-9e1d-08e49a13bfeb"
       },
       "source": [
         "# Let's read in the training lines\n",
         "train_lines = get_lines(data_dir  + \"train.txt\")\n",
         "train_lines[:28]"
       ],
-      "execution_count": 20,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -285,7 +285,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 10
         }
       ]
     },
@@ -293,15 +293,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "qY5AEnCPIGvg",
-        "outputId": "c2f560c9-7712-456b-e7f0-b4e0e2131d15",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "94de7231-cd1e-4b18-df94-ee5d3b7c1138"
       },
       "source": [
         "len(train_lines)"
       ],
-      "execution_count": 16,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -313,7 +313,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 11
         }
       ]
     },
@@ -331,9 +331,11 @@
         "[{'line_number' : 0,\n",
         "   'target' : 'BACKGROUND',\n",
         "   'text' : \"Emotional eating is associated with overeating and the development of obesity .\\n\",\n",
-        "   'total_tines' : 11},\n",
+        "   'total_lines' : 11},\n",
         "   ...]   \n",
-        "```"
+        "```\n",
+        "\n",
+        "Let's write a function which turns each of our datasets into the above format, so we can continue to prepare our data for modelling.\n"
       ]
     },
     {
@@ -342,10 +344,160 @@
         "id": "It6ojyGTJm9S"
       },
       "source": [
-        ""
+        "def preprocess_text_with_line_numbers(filename) :\n",
+        "  \"\"\"\n",
+        "  Returns list of dictionary of abstract line data.\n",
+        "\n",
+        "  Takes in filename, reads it contents and sort through each line, \n",
+        "  extracting things like the target label, text of the sentence,\n",
+        "  how many sentences are in the current abstract and what sentence number\n",
+        "  the target line is\n",
+        "  \"\"\"\n",
+        "  input_lines = get_lines(filename) # get all lines from filename\n",
+        "  abstract_lines = \"\" # create an empty abstract\n",
+        "  abstract_samples = [] # create an empty list of abstracts\n",
+        "\n",
+        "  # Loop through each line in the target line\n",
+        "  for line in input_lines :\n",
+        "\n",
+        "    if line.startswith(\"###\") : # check to see if the line is an ID line\n",
+        "      abstract_id = line\n",
+        "      abstract_lines= \"\" # reset the abstract string if the line is an ID line\n",
+        "\n",
+        "    elif line.isspace() : # check to see if the line is a new line\n",
+        "      abstract_line_split = abstract_lines.splitlines() # split abstract lines into separate lines     \n",
+        "      # Iterate through each line in a single abstract and count at same time\n",
+        "      for abstract_line_number, abstract_line in enumerate(abstract_line_split) :\n",
+        "        target_text_split = abstract_line.split(\"\\t\") # split target label from text\n",
+        "        line_data ={} # create an empty dictionar for each line\n",
+        "        line_data[\"target\"] = target_text_split[0]\n",
+        "        line_data[\"text\"] = target_text_split[1].lower() # get target text and lower it\n",
+        "        line_data[\"line_number\"] = abstract_line_number # what number line does the line appear on the abstract\n",
+        "        line_data[\"total_lines\"] = len(abstract_line_split) -1 # how many total lines are there in the target abstract? (start from 0) \n",
+        "        abstract_samples.append(line_data) # add line data to abstract samples list\n",
+        "\n",
+        "    else : # if the above conditions aren't fulfilled, the line contains a labelled sentence\n",
+        "      abstract_lines += line\n",
+        "\n",
+        "  return abstract_samples\n",
+        "\n"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wWk8FwfEbhme",
+        "outputId": "46b2b34f-511d-444b-c3dd-afe24d756c91",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Get data from file and preprocess it\n",
+        "%%time\n",
+        "train_samples = preprocess_text_with_line_numbers(data_dir + \"train.txt\")\n",
+        "val_samples = preprocess_text_with_line_numbers(data_dir + \"dev.txt\") # dev is another name for val\n",
+        "test_samples = preprocess_text_with_line_numbers(data_dir + \"test.txt\")\n",
+        "print(len(train_samples), len(val_samples), len(test_samples))"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "180040 30212 30135\n",
+            "CPU times: user 441 ms, sys: 89.6 ms, total: 530 ms\n",
+            "Wall time: 533 ms\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ApFKvvNocl2h",
+        "outputId": "c3258001-babb-4e15-a3c1-f7c2e92c898b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check the first abstract of our training  data\n",
+        "train_samples[:14]"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[{'line_number': 0,\n",
+              "  'target': 'OBJECTIVE',\n",
+              "  'text': 'to investigate the efficacy of @ weeks of daily low-dose oral prednisolone in improving pain , mobility , and systemic low-grade inflammation in the short term and whether the effect would be sustained at @ weeks in older adults with moderate to severe knee osteoarthritis ( oa ) .',\n",
+              "  'total_lines': 11},\n",
+              " {'line_number': 1,\n",
+              "  'target': 'METHODS',\n",
+              "  'text': 'a total of @ patients with primary knee oa were randomized @:@ ; @ received @ mg/day of prednisolone and @ received placebo for @ weeks .',\n",
+              "  'total_lines': 11},\n",
+              " {'line_number': 2,\n",
+              "  'target': 'METHODS',\n",
+              "  'text': 'outcome measures included pain reduction and improvement in function scores and systemic inflammation markers .',\n",
+              "  'total_lines': 11},\n",
+              " {'line_number': 3,\n",
+              "  'target': 'METHODS',\n",
+              "  'text': 'pain was assessed using the visual analog pain scale ( @-@ mm ) .',\n",
+              "  'total_lines': 11},\n",
+              " {'line_number': 4,\n",
+              "  'target': 'METHODS',\n",
+              "  'text': 'secondary outcome measures included the western ontario and mcmaster universities osteoarthritis index scores , patient global assessment ( pga ) of the severity of knee oa , and @-min walk distance ( @mwd ) .',\n",
+              "  'total_lines': 11},\n",
+              " {'line_number': 5,\n",
+              "  'target': 'METHODS',\n",
+              "  'text': 'serum levels of interleukin @ ( il-@ ) , il-@ , tumor necrosis factor ( tnf ) - , and high-sensitivity c-reactive protein ( hscrp ) were measured .',\n",
+              "  'total_lines': 11},\n",
+              " {'line_number': 6,\n",
+              "  'target': 'RESULTS',\n",
+              "  'text': 'there was a clinically relevant reduction in the intervention group compared to the placebo group for knee pain , physical function , pga , and @mwd at @ weeks .',\n",
+              "  'total_lines': 11},\n",
+              " {'line_number': 7,\n",
+              "  'target': 'RESULTS',\n",
+              "  'text': 'the mean difference between treatment arms ( @ % ci ) was @ ( @-@ @ ) , p < @ ; @ ( @-@ @ ) , p < @ ; @ ( @-@ @ ) , p < @ ; and @ ( @-@ @ ) , p < @ , respectively .',\n",
+              "  'total_lines': 11},\n",
+              " {'line_number': 8,\n",
+              "  'target': 'RESULTS',\n",
+              "  'text': 'further , there was a clinically relevant reduction in the serum levels of il-@ , il-@ , tnf - , and hscrp at @ weeks in the intervention group when compared to the placebo group .',\n",
+              "  'total_lines': 11},\n",
+              " {'line_number': 9,\n",
+              "  'target': 'RESULTS',\n",
+              "  'text': 'these differences remained significant at @ weeks .',\n",
+              "  'total_lines': 11},\n",
+              " {'line_number': 10,\n",
+              "  'target': 'RESULTS',\n",
+              "  'text': 'the outcome measures in rheumatology clinical trials-osteoarthritis research society international responder rate was @ % in the intervention group and @ % in the placebo group ( p < @ ) .',\n",
+              "  'total_lines': 11},\n",
+              " {'line_number': 11,\n",
+              "  'target': 'CONCLUSIONS',\n",
+              "  'text': 'low-dose oral prednisolone had both a short-term and a longer sustained effect resulting in less knee pain , better physical function , and attenuation of systemic inflammation in older patients with knee oa ( clinicaltrials.gov identifier nct@ ) .',\n",
+              "  'total_lines': 11},\n",
+              " {'line_number': 0,\n",
+              "  'target': 'BACKGROUND',\n",
+              "  'text': 'emotional eating is associated with overeating and the development of obesity .',\n",
+              "  'total_lines': 10},\n",
+              " {'line_number': 1,\n",
+              "  'target': 'BACKGROUND',\n",
+              "  'text': 'yet , empirical evidence for individual ( trait ) differences in emotional eating and cognitive mechanisms that contribute to eating during sad mood remain equivocal .',\n",
+              "  'total_lines': 10}]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
+        }
+      ]
     }
   ]
 }
