--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -506,12 +506,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "efTctER8c7ga",
-        "outputId": "f231246c-3d81-4b5b-cef3-c7d886ff6337",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 483
-        }
+        },
+        "id": "efTctER8c7ga",
+        "outputId": "f231246c-3d81-4b5b-cef3-c7d886ff6337"
       },
       "source": [
         "import pandas as pd\n",
@@ -683,11 +683,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "B7UIQop8939p",
-        "outputId": "5fd7e513-9bb6-4a41-ba55-8456aa6fcc25",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "B7UIQop8939p",
+        "outputId": "5fd7e513-9bb6-4a41-ba55-8456aa6fcc25"
       },
       "source": [
         "# Distribution of labels in training data\n",
@@ -717,12 +717,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kRFmpmQ8-H_K",
-        "outputId": "6670346e-0dde-45f1-f448-825dd54a4c59",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 267
-        }
+        },
+        "id": "kRFmpmQ8-H_K",
+        "outputId": "6670346e-0dde-45f1-f448-825dd54a4c59"
       },
       "source": [
         "# Let's check the length of different lines\n",
@@ -757,11 +757,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nJzqUxaD-8lR",
-        "outputId": "afb586ba-aba9-464e-d3a4-fb061378f254",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nJzqUxaD-8lR",
+        "outputId": "afb586ba-aba9-464e-d3a4-fb061378f254"
       },
       "source": [
         "# Convert abstract text lines into lists\n",
@@ -789,11 +789,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tfhz2zfOABQW",
-        "outputId": "838d73cb-6cc1-4eaf-c2f3-c2a7d952d3e4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tfhz2zfOABQW",
+        "outputId": "838d73cb-6cc1-4eaf-c2f3-c2a7d952d3e4"
       },
       "source": [
         "# View the 10 lines of training sentences\n",
@@ -825,12 +825,101 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "MnCl-CDyAIbu"
+        "id": "uLxxzJwnBWxO"
       },
       "source": [
-        "# Convert abstract target into lists\n"
+        "## Make numeric labels (ML model requires numeric labels)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MnCl-CDyAIbu",
+        "outputId": "ddabf281-b239-48c3-b46e-fd9ed0b56fb9"
+      },
+      "source": [
+        "# One hot encode labels\n",
+        "# Sparse Matrix not applicable here , read more https://machinelearningmastery.com/sparse-matrices-for-machine-learning/\n",
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "one_hot_encoder = OneHotEncoder(sparse=False) # we want a non-sparse matrix\n",
+        "train_labels_one_hot = one_hot_encoder.fit_transform(train_df[\"target\"].to_numpy().reshape(-1, 1))\n",
+        "val_labels_one_hot = one_hot_encoder.transform(val_df[\"target\"].to_numpy().reshape(-1, 1))\n",
+        "test_labels_one_hot = one_hot_encoder.transform(test_df[\"target\"].to_numpy().reshape(-1, 1))\n",
+        "# Check what one hot encoded labels look like\n",
+        "train_labels_one_hot"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0., 0., 0., 1., 0.],\n",
+              "       [0., 0., 1., 0., 0.],\n",
+              "       [0., 0., 1., 0., 0.],\n",
+              "       ...,\n",
+              "       [0., 0., 0., 0., 1.],\n",
+              "       [0., 1., 0., 0., 0.],\n",
+              "       [0., 1., 0., 0., 0.]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NQfrfJgsDfQi",
+        "outputId": "2b8351a7-14fe-4fc4-c8e9-186ba4c3face",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "## Label encode labels\n",
+        "# Extract labels (\"target\" columns) and encode them into integers\n",
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "label_encoder = LabelEncoder()\n",
+        "train_labels_encoded = label_encoder.fit_transform(train_df[\"target\"].to_numpy())\n",
+        "val_labels_encoded = label_encoder.transform(val_df[\"target\"].to_numpy())\n",
+        "test_labels_encoded = label_encoder.transform(test_df[\"target\"].to_numpy())\n",
+        "\n",
+        "# check what training labels look like\n",
+        "\n",
+        "train_labels_encoded"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([3, 2, 2, ..., 4, 1, 1])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cSFEakNYEI30"
+      },
+      "source": [
+        "# Get class "
       ],
       "execution_count": null,
       "outputs": []
